Update Static Web Apps workflow

--- a/.github/workflows/azure-static-web-apps-broverse.yml
+++ b/.github/workflows/azure-static-web-apps-broverse.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   build_and_deploy:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
@@ -16,6 +20,9 @@ jobs:
     name: Build and Deploy
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
+          lfs: false
 
       - name: Build and Deploy
         uses: Azure/static-web-apps-deploy@v1
@@ -26,6 +33,7 @@ jobs:
           app_location: "frontend"
           api_location: ""
           output_location: "dist"
+          skip_app_build: false
         env:
           VITE_APPINSIGHTS_CONNECTION_STRING: ${{ secrets.VITE_APPINSIGHTS_CONNECTION_STRING }}
 
@@ -33,6 +41,9 @@ jobs:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
     name: Close Pull Request
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Close Pull Request
         uses: Azure/static-web-apps-deploy@v1
