--- a/.github/workflows/azure-static-web-apps-broverse.yml
+++ b/.github/workflows/azure-static-web-apps-broverse.yml
@@ -41,10 +41,11 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "frontend/dist"
+          app_location: "frontend"
           api_location: ""
-          output_location: ""
+          output_location: "dist"
           skip_app_build: true
+          app_artifact_location: "frontend/dist"
         env:
           VITE_APPINSIGHTS_CONNECTION_STRING: ${{ secrets.VITE_APPINSIGHTS_CONNECTION_STRING }}
 
