--- a/.github/workflows/azure-static-web-apps-broverse.yml
+++ b/.github/workflows/azure-static-web-apps-broverse.yml
@@ -48,6 +48,7 @@ jobs:
           app_artifact_location: "frontend/dist"
         env:
           VITE_APPINSIGHTS_CONNECTION_STRING: ${{ secrets.VITE_APPINSIGHTS_CONNECTION_STRING }}
+          NODE_VERSION: 20.19.0
 
   close_pull_request:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
