Wire board to API and add auth integration

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
 # Azure Application Insights connection string for client-side tracing
 VITE_APPINSIGHTS_CONNECTION_STRING=
+
+# BroVerse API base URL
+VITE_API_BASE_URL=https://broverse-api-20260127.azurewebsites.net
