Add SWA route rewrites

--- a/frontend/public/staticwebapp.config.json
+++ b/frontend/public/staticwebapp.config.json
@@ -1,4 +1,14 @@
 {
+    "routes": [
+        {
+            "route": "/board",
+            "rewrite": "/index.html"
+        },
+        {
+            "route": "/*",
+            "rewrite": "/index.html"
+        }
+    ],
     "navigationFallback": {
         "rewrite": "/index.html",
         "exclude": [
