--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,12 @@
         "prisma:studio": "prisma studio"
     },
     "dependencies": {
+        "@azure/storage-blob": "^12.30.0",
+        "@opentelemetry/auto-instrumentations-node": "^0.69.0",
+        "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
+        "@opentelemetry/resources": "^2.5.0",
+        "@opentelemetry/sdk-node": "^0.211.0",
+        "@opentelemetry/semantic-conventions": "^1.39.0",
         "@prisma/client": "^6.12.0",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
@@ -19,8 +25,8 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "multer": "^2.0.2",
         "prisma": "^6.12.0",
         "zod": "^3.25.76"
-    },
-    "devDependencies": {}
+    }
 }
