Milestone 4, Phases 4.3-4.4: Add Cosmos DB + AI Profiles API
Phase 4.3:
- Create Azure Cosmos DB account (broverse-cosmos769602529, serverless)
- Create database 'broverse' and container 'ai-profiles' (/userId partition key)
- Set COSMOS_ENDPOINT and COSMOS_KEY in App Service env vars

Phase 4.4:
- Create cosmosService.js for persona CRUD operations
- Create ai-profiles.js routes:
  - GET /ai-profiles/:userId (get full profile + personas)
  - POST /ai-profiles/:userId/personas (create persona, max 20)
  - PUT /ai-profiles/:userId/personas/:personaId (update)
  - DELETE /ai-profiles/:userId/personas/:personaId (delete)
  - POST /ai-profiles/:userId/personas/:personaId/chat (add message)
  - GET /ai-profiles/:userId/quota (storage + persona usage)
- Implement conversation history (max 100 messages per persona)
- Auto-trim old messages to prevent bloat
- Integrate with storage quota tracking

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
         "prisma:studio": "prisma studio"
     },
     "dependencies": {
+        "@azure/cosmos": "^4.9.0",
         "@azure/storage-blob": "^12.30.0",
         "@opentelemetry/auto-instrumentations-node": "^0.69.0",
         "@opentelemetry/exporter-trace-otlp-http": "^0.211.0",
