--- a/.github/workflows/azure-static-web-apps-broverse.yml
+++ b/.github/workflows/azure-static-web-apps-broverse.yml
@@ -37,9 +37,10 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "frontend/dist"
+          app_location: "frontend"
+          output_location: "dist"
           api_location: ""
-          skip_app_build: true
+          skip_app_build: false
         env:
           VITE_APPINSIGHTS_CONNECTION_STRING: ${{ secrets.VITE_APPINSIGHTS_CONNECTION_STRING }}
           NODE_VERSION: 20.19.0
